<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="20dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Vetements
        Fashion"
        android:textAlignment="center"
        android:textSize="20dp"
        android:gravity="center"
        android:textColor="#00416A"
        android:fontFamily="@font/comfortaalight"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/tvtitlelogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textAlignment="center"
        android:textSize="23dp"
        android:gravity="center"
        android:textColor="#00416A"
        android:fontFamily="@font/comfortaalight"
        android:layout_marginTop="0dp"
        />


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Email Here"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:height="50dp"
        android:gravity="center"
        android:background="@drawable/registerborder"
        />
    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Your Password"
        android:inputType="textPassword"
        android:layout_marginTop="40dp"
        android:padding="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:height="50dp"
        android:gravity="center"
        android:background="@drawable/registerborder"
        />

    <Button
        android:id="@+id/btnIdlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:width="290dp"
        android:background="@drawable/buttonradius"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="Log In"
        android:textAlignment="center"

        />
</LinearLayout>
</ScrollView>