...
        android:textColor="@color/black"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.993"
        app:layout_constraintStart_toEndOf="@+id/imgfavouriteitem"
        app:layout_constraintTop_toBottomOf="@+id/imgfavouritecart" />

    <ImageView
        android:id="@+id/imgfavouritedelete"
        android:layout_width="35dp"
        android:layout_height="35dp"

...
