<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.denzcoskun.imageslider.ImageSlider
        android:layout_height="240dp"
        android:layout_width="match_parent"
        android:id="@+id/imgSlider"
        app:placeholder="@drawable/summerbadge"
        app:error_image="@drawable/noimg"
        app:auto_cycle="true"
        app:delay="0"
        app:period="1000"
        app:corner_radius="5"
        android:layout_margin="10dp"
        >
    </com.denzcoskun.imageslider.ImageSlider>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSmallitem"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtTestimonials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaabold"
            android:text="Testimonials"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewnewitem" />



        <TextView
            android:id="@+id/txtNewestProduct2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/comfortaabold"
            android:text="New Products"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewrecentitem" />

        <TextView
            android:id="@+id/txtrecentproduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/comfortaabold"
            android:text="Recent Products"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtViewallproduct"
            android:layout_width="98dp"
            android:layout_height="28dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/comfortaabold"
            android:text="View All"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/txtrecentproduct"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtnewproductviewall"
            android:layout_width="86dp"
            android:layout_height="30dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/comfortaabold"
            android:text="View All"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.953"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewrecentitem" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewrecentitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtrecentproduct" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewnewitem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNewestProduct2" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTestimonial"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTestimonials" />

        <com.synnapps.carouselview.CarouselView
            android:id="@+id/DiscountimgSlider"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_margin="10dp"
            app:auto_cycle="true"
            android:paddingBottom="20dp"
            app:corner_radius="5"
            app:slideInterval="4000"
            app:fillColor="#FFFFFF"
            app:pageColor="#000000"
            app:radius="6dp"
            app:error_image="@drawable/noimg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:period="1000"
            app:placeholder="@drawable/summerbadge"
            tools:layout_editor_absoluteY="288dp"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewTestimonial">

        </com.synnapps.carouselview.CarouselView>

    </androidx.constraintlayout.widget.ConstraintLayout>





</LinearLayout>
</ScrollView>