<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/lenearlayout"
    tools:context=".ui.LoginActivity">
    <ImageView
        android:id="@+id/backIcn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_arrow"
        tools:ignore="VectorDrawableCompat" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log in"
        android:id="@+id/tvlogIntxt"
        android:fontFamily="@font/comfortaabold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="40dp"
        android:textColor="#363636"
        />
    <TextView
        android:id="@+id/tvtitlelogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Vetements FASHION"
        android:textAlignment="center"
        android:textSize="43dp"
        android:gravity="center"
        android:textColor="#00416A"
        android:fontFamily="@font/comfortaalight"
        android:layout_marginTop="0dp"
        />

    <ImageView
        android:id="@+id/imageV"
        android:layout_width="148dp"
        android:layout_height="111dp"
        android:layout_marginLeft="118dp"
        app:srcCompat="@drawable/ic_v_logo"
        tools:ignore="VectorDrawableCompat" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Email Here"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:height="50dp"
        android:gravity="center"
        android:background="@drawable/registerborder"
        />
    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Your Password"
        android:inputType="textPassword"
        android:layout_marginTop="40dp"
        android:padding="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:height="50dp"
        android:gravity="center"
        android:background="@drawable/registerborder"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forget Password?"
        android:id="@+id/tvforrgetpass"
        android:fontFamily="@font/comfortaabold"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:textSize="40dp"
        android:textColor="#2A363B"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log In"
        android:id="@+id/btnIdlogin"
        android:gravity="center"
        android:width="290dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttonradius"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginLeft="55dp"
        android:fontFamily="@font/comfortaabold"
        />
</LinearLayout>
</layout>